maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: not found: value getWordlHeight
  for(i <- 0 to getWordlHeight() - 1) {
                ^